--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <link rel="alternate icon" sizes="16x16" href="/img/icon/favicon_16_16.ico" />
         <title>Space Track - Home</title>
         <meta id="theme">
-        <link rel="stylesheet" href="/files/css/assets/toggle.css">
+        <link rel="stylesheet" href="./files/css/assets/toggle.css">
     </head>
 
     <body>
@@ -33,9 +33,9 @@
         <footer>
             <p>Goodbye World</p>
         </footer>
-        <script src="/files/js/BodyHeader.js" type="text/JavaScript"></script>
-        <script src="/files/js/assets/cookie_dealing.js" type="text/JavaScript"></script>
-        <script src="/files/js/assets/dark_light.js" type="text/JavaScript"></script>
+        <script src="./files/js/BodyHeader.js" type="text/JavaScript"></script>
+        <script src="./files/js/assets/cookie_dealing.js" type="text/JavaScript"></script>
+        <script src="./files/js/assets/dark_light.js" type="text/JavaScript"></script>
         <script type="text/JavaScript">
             writeBodyHeader("header");
             initialiseTheme("theme","darkOrLight",'/','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
