[ATTEMTPING] to make the page load

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <link rel="alternate icon" sizes="16x16" href="/img/icon/favicon_16_16.ico" />
         <title>Space Track - Home</title>
         <meta id="theme">
-        <link rel="stylesheet" href="/files/css/assets/toggle.css">
-        <script src="/files/js/BodyHeader.js" type="text/JavaScript"></script>
-        <script src="/files/js/assets/cookie_dealing.js" type="text/JavaScript"></script>
-        <script src="/files/js/assets/dark_light.js" type="text/JavaScript"></script>
+        <link rel="stylesheet" href="./files/css/assets/toggle.css">
+        <script src="./files/js/BodyHeader.js" type="text/JavaScript"></script>
+        <script src="./files/js/assets/cookie_dealing.js" type="text/JavaScript"></script>
+        <script src="./files/js/assets/dark_light.js" type="text/JavaScript"></script>
     </head>
 
     <body>
@@ -39,7 +39,7 @@
         </footer>
         <script type="text/JavaScript">
             writeBodyHeader("header");
-            initialiseTheme("theme","darkOrLight",'/','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
+            initialiseTheme("theme","darkOrLight",'./','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
