[FIXED] the paths for the images

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <meta name="google-site-verification" content="" />
         <meta http-equiv=" pragma" content="cache" />
         <meta http-equiv="Cache-control" content="public" />
-        <link rel="shortcut icon" type="image/x-icon" href="/img/icon/favicon_16_16.ico" /> <!--//IE-->
-        <link rel="icon" type="image/svg+xml" href="/img/icon/favicon_32_32.svg" /> <!--//Chrome extra requirements-->
-        <link rel="icon" type="image/png" href="/img/icon/favicon_32_32.png" /> <!--//all-->
-        <link rel="alternate icon" sizes="16x16" href="/img/icon/favicon_16_16.ico" />
+        <link rel="shortcut icon" type="image/x-icon" href="./files/img/icon/favicon_16_16.ico" /> <!--//IE-->
+        <link rel="icon" type="image/svg+xml" href="./files/img/icon/favicon_32_32.svg" /> <!--//Chrome extra requirements-->
+        <link rel="icon" type="image/png" href="./files/img/icon/favicon_32_32.png" /> <!--//all-->
+        <link rel="alternate icon" sizes="16x16" href="./files/img/icon/favicon_16_16.ico" />
         <title>Space Track - Home</title>
         <meta id="theme">
         <link rel="stylesheet" href="./files/css/assets/toggle.css">
