--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
         </footer>
         <script type="text/JavaScript">
-            writeBodyHeader("header");
+            writeBodyHeader("header", "/space-track-home");
             initialiseTheme("theme","darkOrLight",'./','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
