[FIXING] the 404 page

--- a/files/sub_pages/error/404_page/index.html
+++ b/files/sub_pages/error/404_page/index.html
@@ -74,9 +74,9 @@
                 <p>Sorry, Page Not Found.</p>
             </div>
         </div>
-        <footer>
-            <script type="text/JavaScript"></script>
-        </footer>
+
+        <script type="text/JavaScript" src="/space-track-home/files/sub_pages/error/404_page/script.js"></script>
+
     </body>
 
 </html>
