[MADE] a sub-page work

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <script type="text/JavaScript">
             table_of_contents('table_of_content');
             animate_menu('table_of_contents');
-            writeBodyHeader("header", "/space-track-home");
+            writeBodyHeader("header", "/space-track-home/");
             initialiseTheme("theme","darkOrLight",'./','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
