--- a/files/sub_pages/try_me/index.html
+++ b/files/sub_pages/try_me/index.html
@@ -18,7 +18,7 @@
         <link rel="icon" type="image/svg+xml" href="./../../img/icon/favicon_32_32.svg" /> <!--//Chrome extra requirements-->
         <link rel="icon" type="image/png" href="./../../img/icon/favicon_32_32.png" /> <!--//all-->
         <link rel="alternate icon" sizes="16x16" href="./../../img/icon/favicon_16_16.ico" />
-        <title>Space Track - try_me</title>
+        <title>Space Track - Try me</title>
         <meta id="theme">
         <link rel="stylesheet" href="./../../css/assets/toggle.css">
         <link rel="stylesheet" href="./../../css/assets/table_of_contents.css">
@@ -43,7 +43,7 @@
             <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
         </footer>
         <script type="text/JavaScript">
-            table_of_contents('table_of_content');
+            table_of_contents('table_of_content', 'Try me');
             animate_menu('table_of_contents');
             writeBodyHeader("header", "../../../");
             initialiseTheme("theme","darkOrLight",'../../../','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
