--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
         </footer>
         <script type="text/JavaScript">
-            table_of_contents('table_of_content');
+            table_of_contents('table_of_content','Home');
             animate_menu('table_of_contents');
             writeBodyHeader("header", "/space-track-home/");
             initialiseTheme("theme","darkOrLight",'./','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
