--- a/files/sub_pages/credits/index.html
+++ b/files/sub_pages/credits/index.html
@@ -22,12 +22,15 @@
         <meta id="theme">
         <link rel="stylesheet" href="./../../css/assets/toggle.css">
         <link rel="stylesheet" href="./../../css/assets/table_of_contents.css">
+        <link rel="stylesheet" href="./../../css/stylesheet.css">
         <script src="./../../js/write_body_header.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/sleep.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/cookie_dealing.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/dark_light.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/animate_menu.js" type="text/JavaScript"></script>
         <script src="./../../js/table_of_contents.js" type="text/JavaScript"></script>
+        <script src="./../../js/copyright.js" type="text/JavaScript"></script>
+        <script src="./../../js/add_contributor.js" type="text/JavaScript"></script>
     </head>
 
     <body>
@@ -36,18 +39,44 @@
         <br>
         <br>
         <main>
-            <p>Hello World</p>
+            <h1>Credits</h1>
+            <p>Here are the credits for the game Space Track <img class="img_icon" src="../../img/icon/favicon_64_64.png" /></p>
+
+            <h2>Lore and Code</h2>
+            <span id='IM'></span>
+            <span id='TL'></span>
+            <span id='HSK'></span>
+            <span id='EX'></span>
+            <h2>Icon's and Images</h2>
+            <span id="NF"></span>
+            <span id="N"></span>
+            <span id="N91"></span>
+            <span id="D"></span>
+            <h2>Website</h2>
+            <span id='HL'></span>
         </main>
         <footer>
-            <p>Goodbye World</p>
-            <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
+            <inform>This Website Uses only one cookie to track the theme you are using. <button class=" inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
+            <copyright id="copyright_zone"></copyright>
         </footer>
         <script type="text/JavaScript">
             table_of_contents('table_of_content', 'Credits');
             animate_menu('table_of_contents');
             writeBodyHeader("header", "../../../");
             initialiseTheme("theme","darkOrLight",'../../../','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
+            copyright("copyright_zone");
         </script>
+        <script type="text/JavaScript">
+            add_contributor('IM', "Marie Incandela", "https://www.linkedin.com/in/marie-incandela/", "@@marie-incandela", "(Linkedin)");
+            add_contributor('HSK', "Harleen Singh Kaur", "https://www.linkedin.com/in/harleen-singh-kaur/", "@harleen_singh-kaur", "(Linkedin)");
+            add_contributor('N91', "Nyway", "https://www.instagram.com/ninjade91/", "@ninjade91", "(Instagram)");
+            add_contributor('D', "Mayhém", "https://twitter.com/Dizourdre/", "@Dizourdre","(Twitter)");
+            add_contributor('N', "Nyway", "https://twitter.com/Nyway_/", "@Nyway", "(Twitter)");
+            add_contributor('NF', "Noriitsu", "https://www.instagram.com/noriitsu_fox/", "@noriitsu_fox", "(Instagram)");
+            add_contributor('HL', "Henry Letellier", "https://www.linkedin.com/in/henry-letellier/", "@HenryLetellier", "(Linkedin)");
+            add_contributor('TM', "Thomas Lebouc", "https://www.linkedin.com/in/thomas-lebouc/", "@thomas_lebouc", "(Linkedin)");
+            add_contributor('EX', "Eric Xu", "https://www.linkedin.com/in/eric-xu-dev/", "@eric_xu", "(Linkedin)");
+            </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
 
