--- a/files/sub_pages/story/index.html
+++ b/files/sub_pages/story/index.html
@@ -28,6 +28,7 @@
         <script src="./../../js/assets/dark_light.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/animate_menu.js" type="text/JavaScript"></script>
         <script src="./../../js/table_of_contents.js" type="text/JavaScript"></script>
+        <script src="./../../js/copyright.js" type="text/JavaScript"></script>
     </head>
 
     <body>
@@ -39,8 +40,8 @@
             <p>Hello World</p>
         </main>
         <footer>
-            <p>Goodbye World</p>
             <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
+            <copyright id="copyright_zone"></copyright>
         </footer>
         <script type="text/JavaScript">
             table_of_contents('table_of_content', 'Story');
