--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src="./files/js/assets/dark_light.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/animate_menu.js" type="text/JavaScript"></script>
         <script src="./files/js/table_of_contents.js" type="text/JavaScript"></script>
+        <script src="./files/js/copyright.js" type="text/JavaScript"></script>
     </head>
 
     <body>
@@ -36,17 +37,21 @@
         <br>
         <br>
         <main>
-            <p>Hello World</p>
+            <h1>Welcome to Space Track </h1>
+            <h2>
+                <center>The Game where you need to find your long lost Rover &hearts;</center>
+            </h2>
         </main>
         <footer>
-            <p>Goodbye World</p>
             <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
+            <copyright id="copyright_zone"></copyright>
         </footer>
         <script type="text/JavaScript">
             table_of_contents('table_of_content','Home');
             animate_menu('table_of_contents');
             writeBodyHeader("header", "/space-track-home/");
             initialiseTheme("theme","darkOrLight",'./','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
+            copyright("copyright_zone");
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
