[FIXED] credit links

--- a/files/sub_pages/credits/index.html
+++ b/files/sub_pages/credits/index.html
@@ -74,7 +74,7 @@
             add_contributor('N', "Nyway", "https://twitter.com/Nyway_/", "@Nyway", "(Twitter)");
             add_contributor('NF', "Noriitsu", "https://www.instagram.com/noriitsu_fox/", "@noriitsu_fox", "(Instagram)");
             add_contributor('HL', "Henry Letellier", "https://www.linkedin.com/in/henry-letellier/", "@HenryLetellier", "(Linkedin)");
-            add_contributor('TM', "Thomas Lebouc", "https://www.linkedin.com/in/thomas-lebouc/", "@thomas_lebouc", "(Linkedin)");
+            add_contributor('TL', "Thomas Lebouc", "https://www.linkedin.com/in/thomas-lebouc/", "@thomas_lebouc", "(Linkedin)");
             add_contributor('EX', "Eric Xu", "https://www.linkedin.com/in/eric-xu-dev/", "@eric_xu", "(Linkedin)");
             </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
