--- a/files/sub_pages/credits/index.html
+++ b/files/sub_pages/credits/index.html
@@ -29,6 +29,7 @@
         <script src="./../../js/assets/cookie_dealing.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/dark_light.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/animate_menu.js" type="text/JavaScript"></script>
+        <script src="./../../js/assets/add_inform.js" type="text/JavaScript"></script>
         <script src="./../../js/assets/reload_page.js" type="text/JavaScript"></script>
         <script src="./../../js/table_of_contents.js" type="text/JavaScript"></script>
         <script src="./../../js/copyright.js" type="text/JavaScript"></script>
@@ -59,7 +60,9 @@
             <span id='HL'></span>
         </main>
         <footer>
-            <inform>This Website Uses only one cookie to track the theme you are using. <button class=" inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
+            <span id="site_credits"></span>
+            <br>
+            <inform id="inform_cookie"></inform>
             <copyright id="copyright_zone"></copyright>
         </footer>
         <script type="text/JavaScript">
@@ -68,18 +71,20 @@
             writeBodyHeader("header", "../../../");
             initialiseTheme("theme","darkOrLight",'../../../','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
             copyright("copyright_zone");
+            add_inform("inform_cookie");
         </script>
         <script type="text/JavaScript">
-            add_contributor('IM', "Marie Incandela", "https://www.linkedin.com/in/marie-incandela/", "@marie-incandela", "Linkedin");
-            add_contributor('HSK', "Harleen Singh Kaur", "https://www.linkedin.com/in/harleen-singh-kaur/", "@harleen_singh-kaur", "Linkedin");
-            add_contributor('N91', "Nyway", "https://www.instagram.com/ninjade91/", "@ninjade91", "Instagram");
-            add_contributor('D', "Mayhém", "https://twitter.com/Dizourdre/", "@Dizourdre","Twitter");
-            add_contributor('N', "Nyway", "https://twitter.com/Nyway_/", "@Nyway", "Twitter");
-            add_contributor('NF', "Noriitsu", "https://www.instagram.com/noriitsu_fox/", "@noriitsu_fox", "Instagram");
-            add_contributor('HL', "Henry Letellier", "https://www.linkedin.com/in/henry-letellier/", "@HenryLetellier", "Linkedin");
-            add_contributor('TL', "Thomas Lebouc", "https://www.linkedin.com/in/thomas-lebouc/", "@thomas_lebouc", "Linkedin");
-            add_contributor('EX', "Eric Xu", "https://www.linkedin.com/in/eric-xu-dev/", "@eric_xu", "Linkedin");
-            </script>
+            add_contributor('IM', "Marie Incandela", "https://www.linkedin.com/in/marie-incandela/", "@marie-incandela", "Linkedin", "../../../");
+            add_contributor('HSK', "Harleen Singh Kaur", "https://www.linkedin.com/in/harleen-singh-kaur/", "@harleen_singh-kaur", "Linkedin", "../../../");
+            add_contributor('N91', "Nyway", "https://www.instagram.com/ninjade91/", "@ninjade91", "Instagram", "../../../");
+            add_contributor('D', "Mayhém", "https://twitter.com/Dizourdre/", "@Dizourdre","Twitter", "../../../");
+            add_contributor('N', "Nyway", "https://twitter.com/Nyway_/", "@Nyway", "Twitter", "../../../");
+            add_contributor('NF', "Noriitsu", "https://www.instagram.com/noriitsu_fox/", "@noriitsu_fox", "Instagram", "../../../");
+            add_contributor('HL', "Henry Letellier", "https://www.linkedin.com/in/henry-letellier/", "@HenryLetellier", "Linkedin", "../../../");
+            add_contributor('TL', "Thomas Lebouc", "https://www.linkedin.com/in/thomas-lebouc/", "@thomas_lebouc", "Linkedin", "../../../");
+            add_contributor('EX', "Eric Xu", "https://www.linkedin.com/in/eric-xu-dev/", "@eric_xu", "Linkedin", "../../../");
+            add_social_credits("site_credits", "../../../");
+        </script>
         <script type="text/JavaScript">
             document.getElementById('darkOrLight').addEventListener('click', reload_page);
         </script>
