--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <link rel="stylesheet" href="./files/css/assets/table_of_contents.css">
         <script src="./files/js/write_body_header.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/sleep.js" type="text/JavaScript"></script>
+        <script src="./../../js/assets/add_inform.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/cookie_dealing.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/dark_light.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/animate_menu.js" type="text/JavaScript"></script>
@@ -43,7 +44,7 @@
             </h2>
         </main>
         <footer>
-            <inform>This Website Uses only one cookie to track the theme you are using. <button class="inform_button" onclick="clear_all_cookies()" aria-label="Clear this websites cookies.">Clear my cookies !</button> </inform>
+            <inform id="inform_cookie"></inform>
             <copyright id="copyright_zone"></copyright>
         </footer>
         <script type="text/JavaScript">
@@ -52,6 +53,7 @@
             writeBodyHeader("header", "/space-track-home/");
             initialiseTheme("theme","darkOrLight",'./','files/css/boostrap/boostrap_dark.css','files/css/boostrap/bootstrap.css');
             copyright("copyright_zone");
+            add_inform("inform_cookie");
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
