[FIXED] the banner on the home page

--- a/files/sub_pages/story/index.html
+++ b/files/sub_pages/story/index.html
@@ -56,6 +56,8 @@
                 <p>We are in the year 2077 <span id="amazed1"></span> and you are a mad scientist named Rick.</p>
                 <br>
                 <p>Embarc on a fascinating journey through space <span id="space1"></span>, start from the earth <span id="earth1"></span> and end on mars <span id="mars1"></span>.</p>
+                <br>
+                <p>But be careful, you are not alone in space. You will have to defend <span id="shield1"></span> yourself and stay healthy <span id="potion1"></span>.</p>
 
             </article>
         </main>
@@ -81,6 +83,8 @@
             add_emoji("space1", "🚀", "a rocket that is flying", "emoji_g_u");
             add_emoji("earth1", "🌍", "a globe that is on the earth", "emoji_g_u");
             add_emoji("mars1", "🌑", "a moon that is on mars", "emoji_g_u");
+            add_emoji("shield1", "🛡️", "a shield", "emoji_g_u");
+            add_emoji("potion1", "🧪", "a test tube", "emoji_g_u");
         </script>
         <script async="" defer="" src="https://buttons.github.io/buttons.js"></script>
     </body>
