--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="./files/css/assets/table_of_contents.css">
         <script src="./files/js/write_body_header.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/sleep.js" type="text/JavaScript"></script>
-        <script src="./../../js/assets/add_inform.js" type="text/JavaScript"></script>
+        <script src="./files/js/assets/add_inform.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/cookie_dealing.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/dark_light.js" type="text/JavaScript"></script>
         <script src="./files/js/assets/animate_menu.js" type="text/JavaScript"></script>
